err/swiftonhpss.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/swiftonhpss'...
Listing './lib/python3.5/site-packages/swiftonhpss/swift'...
Listing './lib/python3.5/site-packages/swiftonhpss/swift/common'...
Listing './lib/python3.5/site-packages/swiftonhpss/swift/common/middleware'...
Listing './lib/python3.5/site-packages/swiftonhpss/swift/obj'...
Listing './lib/python3.5/site-packages/swiftonhpss-2.5.0.0.egg-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/functional'...
Compiling './lib/python3.5/site-packages/test/functional/swift_on_hpss_tests.py'...
***   File "./lib/python3.5/site-packages/test/functional/swift_on_hpss_tests.py", line 91
    print md
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/test/functional/test_account.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (test_account.py, line 752)
Compiling './lib/python3.5/site-packages/test/functional/test_container.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (test_container.py, line 376)
Compiling './lib/python3.5/site-packages/test/functional/tests.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (tests.py, line 368)
Listing './lib/python3.5/site-packages/test/unit'...
Listing './lib/python3.5/site-packages/test/unit/common'...
Listing './lib/python3.5/site-packages/test/unit/common/middleware'...
Compiling './lib/python3.5/site-packages/test/unit/common/test_utils.py'...
***   File "./lib/python3.5/site-packages/test/unit/common/test_utils.py", line 471
    print "_mock_rm-metadata_errors(%s)" % path
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/test/unit/obj'...
Listing './share'...
Listing './share/python-wheels'...
